Fixed snapshot logic to insert all trade events from order.Data.Trades, capturing 73 snapshot trades and 3 post-login trades

--- a/tools/dotNet/T4APIDemo/T4APIDemo/appsettings.json
+++ b/tools/dotNet/T4APIDemo/T4APIDemo/appsettings.json
@@ -9,11 +9,11 @@
     //"RESTUri": "https://api.t4login.com",
 
     // Option 1: Credentials-based authentication
-    "Firm": "",
-    "Username": "",
-    "Password": "",
-    "AppName": "",
-    "AppLicense": "",
+    "Firm": "CTS",
+    "Username": "schwingdorf",
+    "Password": "Summer25$",
+    "AppName": "TradesDatabase",
+    "AppLicense": "F203C65F-6F60-4684-911B-F97D432F8FAA",
 
     // Option 2: API key-based authentication (leave empty if using Option 1)
     "ApiKey": "",
