--- a/tools/dotNet/T4APIDemo/T4APIDemo/T4APIDemo.csproj
+++ b/tools/dotNet/T4APIDemo/T4APIDemo/T4APIDemo.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.5" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.5" />
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="10.0.0-preview.1.25120.3" />
     <PackageReference Include="Google.Protobuf" Version="3.30.2" />
